<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#424242"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Question_2"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        android:textStyle="bold"
        android:typeface="normal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:gravity="center">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_Option1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_margin="15dp"
            android:onClick="option1Select"
            fancy:fb_textSize="25dp"

            fancy:fb_text="@string/Question_2_option_1"
            fancy:fb_ghost="true"
            fancy:fb_focusColor="#40C4FF"
            fancy:fb_textColor="#40C4FF"
            fancy:fb_borderColor="#40C4FF"
            fancy:fb_borderWidth="5dp"
            android:clickable="true" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_Option2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_margin="15dp"
            android:onClick="option2Select"
            fancy:fb_textSize="25dp"

            fancy:fb_text="@string/Question_2_option_2"
            fancy:fb_ghost="true"
            fancy:fb_focusColor="#40C4FF"
            fancy:fb_textColor="#40C4FF"
            fancy:fb_borderColor="#40C4FF"
            fancy:fb_borderWidth="5dp"
            android:clickable="true" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_Option3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_margin="15dp"
            android:onClick="option3Select"
            fancy:fb_textSize="25dp"

            fancy:fb_text="@string/Question_2_option_3"
            fancy:fb_ghost="true"
            fancy:fb_focusColor="#40C4FF"
            fancy:fb_textColor="#40C4FF"
            fancy:fb_borderColor="#40C4FF"
            fancy:fb_borderWidth="5dp"
            android:clickable="true" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_Option4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:layout_margin="15dp"
            android:onClick="option4Select"
            fancy:fb_textSize="25dp"
            fancy:fb_text="@string/Question_2_option_4"
            fancy:fb_ghost="true"
            fancy:fb_focusColor="#40C4FF"
            fancy:fb_textColor="#40C4FF"
            fancy:fb_borderColor="#40C4FF"
            fancy:fb_borderWidth="5dp"
            android:clickable="true" />

    </LinearLayout>
</LinearLayout>